WIP cred vend to storage-creds-cache - step 1